# TNT-Atlas

./: .gitignore  README.md  TESTING.md  launch_dashboard.sh  pyproject.toml  requirements.txt
configs/: default.yaml  test_small.yaml
docs/: NEXT_RUN_REQUIREMENTS.md  PRD_RUN2_FIXES.md  README.md  build-notes.md
docs/analysis/: run_atlas_58m_fineweb_100M.md
scripts/: evaluate.py  preflight_gates.py  prepare_data.py  train.py
src/: __init__.py  atlas_block.py  atlas_memory.py  attention.py  cache_manager.py  config_schema.py  data_loader.py  m3_mixing.py  minimal_block.py  newton_schulz.py  polynomial.py  qk_projection.py  seed_model_loader.py
tests/: __init__.py  conftest.py  test_isolation.py  test_scientific_validation.py
tests/integration/: test_checkpoint.py  test_model_forward.py
tests/unit/: test_config_schema.py  test_data_loader.py
